--- a/src/app/country/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/country/pages/by-capital-page/by-capital-page.component.html
@@ -2,4 +2,8 @@
     placeholder="Buscar por capital"
     (value)="onSearch($event)"
 />
+@if (isError()) {
+<h3 class="mt-5">{{ isError() }}</h3>
+} @else {
 <country-table-list [countries]="countries()" />
+}
