--- a/src/app/country/pages/by-country-page/by-country-page.component.html
+++ b/src/app/country/pages/by-country-page/by-country-page.component.html
@@ -2,8 +2,5 @@
     (value)="onSearch($event)"
     placeholder="Buscar por país"
 />
-@if (isError()) {
-<h3 class="mt-5">{{ isError() }}</h3>
-} @else {
-<country-table-list [countries]="countries()" />
-}
+
+<country-table-list [countries]="countries()" [errorMessage]="" />
