--- a/src/app/country/pages/country-page/country-page.component.html
+++ b/src/app/country/pages/country-page/country-page.component.html
@@ -1,2 +1,14 @@
-<h1>{{ countryCode }}</h1>
-<p>{{ country()?.name }}</p>
+<!--  -->
+@if(isError()){<app-not-found /> }
+<!--  -->
+@if(isLoading()){
+<h1 class="text-3xl">Cargando ...</h1>
+}
+<!--  -->
+<div *ngIf="country() as country">
+    <h2>{{ country.name }}</h2>
+    <p>Capital: {{ country.capital }}</p>
+    <!-- Más campos -->
+</div>
+
+<!-- <p>{{ country()!.name }}</p> -->
