--- a/src/app/country/pages/country-page/country-information/country-information.component.html
+++ b/src/app/country/pages/country-page/country-information/country-information.component.html
@@ -1,1 +1,43 @@
-<p>country-information works!</p>,
+<div class="mx-10">
+    <section class="stats shadow flex justify-center">
+        <div class="stat place-items-centerr">
+            <div class="stat-title">Población</div>
+            <div class="stat-value">{{ country().population | number }}</div>
+            <div class="stat-desc">Desde {{ currentYear() }}</div>
+        </div>
+
+        <div class="stat place-items-center">
+            <div class="stat-title">Nombre del País</div>
+            <div class="stat-value text-secondary">{{ country().name }}</div>
+            <div class="stat-desc text-secondary">{{ country().region }}</div>
+        </div>
+
+        <div class="stat place-items-center">
+            <div class="stat-title">Sub Región</div>
+            <div class="stat-value">{{ country().subRegion }}</div>
+            <div class="stat-desc">{{ country().region }}</div>
+        </div>
+
+        <div class="stat place-items-center">
+            <div class="stat-title">Bandera</div>
+            <div class="stat-value">{{ country().flag }}</div>
+            <div class="stat-desc">{{ country().name }}</div>
+        </div>
+    </section>
+
+    <section>
+        <figure class="diff aspect-16/9" tabindex="0">
+            <div class="diff-item-1" role="img" tabindex="0">
+                <img [alt]="country().name" [src]="country().flagSVG" />
+            </div>
+            <div class="diff-item-2" role="img">
+                <img
+                    class="blur brightness-75"
+                    [alt]="country().name"
+                    [src]="country().flagSVG"
+                />
+            </div>
+            <div class="diff-resizer"></div>
+        </figure>
+    </section>
+</div>
